--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...          
-      - docker build -t alpine .
+      - docker build -t nodeu . .
       - docker tag nodeu:latest 614694465844.dkr.ecr.ap-south-1.amazonaws.com/nodeu:latest
      
   post_build:
