--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,7 +13,7 @@ phases:
       - echo Build started on `date`
       - echo Building the Docker image...          
       - docker build -t nodejss .
-      - docker tag nodejss:latest docker push 614694465844.dkr.ecr.ap-south-1.amazonaws.com/nodejss:latest
+      - docker tag nodejss:latest 614694465844.dkr.ecr.ap-south-1.amazonaws.com/nodejss:latest
      
   post_build:
     commands:
